# bluechi

./: meson.build  meson_options.txt
.github/workflows/: images.yml  integration-tests.yml  lint.yml  publish-images.yml  publish-pypi.yml  publish.yml  release.yml  sbom.yml  unit-tests.yml
build-scripts/: build-bindings.sh  build-deb.sh
config/: meson.build
containers/: bluechi-base-ubuntu
data/: meson.build
src/agent/: agent.c  meson.build
src/client/: meson.build
src/controller/: meson.build
src/libbluechi/: meson.build  socket.c
src/libbluechi/bus/: bus.c
src/libbluechi/journal/: journal.c  journal.h
src/libbluechi/test/: meson.build
src/libbluechi/test/journal/: journal_test.c  meson.build
src/manager/: node.c
src/proxy/: meson.build
systemd-units/: meson.build
tests/bluechi_test/: client.py  config.py  container.py  fixtures.py  machine.py  test.py
tests/plans/: tier0.fmf
tests/scripts/: create_coverage_report.py  gather-code-coverage.sh
tests/tests/tier0/bluechi-agent-cmd-line-c-invalid-config/: test_bluechi_agent_cmd_line_c_invalid_config.py
tests/tests/tier0/bluechi-agent-invalid-port-configuration/: test_agent_invalid_port_configuration.py
tests/tests/tier0/bluechi-agent-logisquiet/: test_agent_logisquiet.py
tests/tests/tier0/bluechi-agent-loglevel/: test_agent_loglevel.py
tests/tests/tier0/bluechi-agent-logtarget/: main.fmf  test_agent_logtarget.py
tests/tests/tier0/bluechi-agent-resolve-fqdn/: test_bluechi_agent_resolve_fqdn.py
tests/tests/tier0/bluechi-anonymous-node/: test_anonymous_node.py
(+49 files in other folders)
